--- a/JPPCore/JPPCore.csproj
+++ b/JPPCore/JPPCore.csproj
@@ -129,6 +129,7 @@
     <Compile Include="LibrarySystem\Library.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="AutocadHelpers\PersistentObjectIdCollection.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
