--- a/Civils/packages.config
+++ b/Civils/packages.config
@@ -3,4 +3,5 @@
   <package id="AutoCAD.NET" version="21.0.2" targetFramework="net452" developmentDependency="true" />
   <package id="AutoCAD.NET.Core" version="21.0.2" targetFramework="net452" developmentDependency="true" />
   <package id="AutoCAD.NET.Model" version="21.0.2" targetFramework="net452" developmentDependency="true" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
 </packages>
